k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: distributed-health
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
